docs: 검색 페이지 관련 추가

--- a/docs/2-검색페이지.md
+++ b/docs/2-검색페이지.md
@@ -2,7 +2,13 @@
 
 ### 페이지 진입 시 `input`에 포커스
 
+`autofocus` 속성을 통해 이를 해결할 수 있다. `autofocus`를 설정하면 페이지가 로드될 때 자동으로 focus가 해당 `input`으로 이동된다. 이는 `boolean`값으로 정의할 수 있다.
+
 ### 데이터로딩 시 UI 추가
+
+먼저 데이터로딩을 표시하는 UI를 만들었다.
+
+그리고 검색어를 입력한 후에 해당 UI를 출력하였고, API 요청이 완료되었을 때 로딩 UI를 제거하였다.
 
 ### 검색 결과가 없을 때의 처리
 
